# GammaRayPC

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  Readme.md  env_settings.cmake  env_settings.cmake.back  install.py  main.cpp
package/: package_rel_debug.bat  package_release.bat
package/config/: config.xml
src/: CMakeLists.txt  app_message.h  application.cpp  application.h  audio_player.cpp  audio_player.h  client_context.cpp  client_context.h  clipboard_manager.cpp  clipboard_manager.h  main.cpp  main_ws.cpp  opengl_image_reader.h  opengl_video_widget.cpp  opengl_video_widget.h  qt_key_converter.cpp  qt_key_converter.h  renderer.h  resources.qrc  settings.cpp  settings.h  sprite.cpp  sprite.h  video_widget.cpp  video_widget.h  video_widget_event.cpp  video_widget_event.h  video_widget_shaders.h  workspace.cpp  workspace.h
src/client/: CMakeLists.txt  app_message.h  application.cpp  application.h  audio_player.cpp  audio_player.h  client_context.cpp  client_context.h  director.h  main.cpp  main_ws.cpp  opengl_image_reader.cpp  opengl_video_widget.cpp  opengl_video_widget.h  qt_key_converter.cpp  qt_key_converter.h  resources.qrc  settings.cpp  settings.h  shader_program.cpp  shader_program.h  sprite.cpp  sprite.h  video_widget.cpp  video_widget.h  video_widget_event.cpp  video_widget_event.h  video_widget_shaders.h  workspace.cpp  workspace.h
src/client/db/: stream_db_manager.cpp
src/client/ui/: FloatButton.cpp  MessageDialog.cpp  MessageDialog.h  RoundRectWidget.cpp  SwitchButton.cpp  SwitchButton.h  app_color_theme.cpp  app_content.cpp  app_menu.cpp  app_menu.h  app_stream_list.cpp  float_button.cpp  settings_content.h  stream_content.cpp  stream_content.h  stream_item_widget.cpp  stream_item_widget.h  switch_button.h
src/db/: stream_db_manager.cpp  stream_db_manager.h
src/host/: CMakeLists.txt  application.cpp  application.h  context.cpp  context.h  host_context.cpp  host_context.h  host_main_window.cpp  host_main_window.h  main.cpp  workspace.cpp  workspace.h
src/transfer/: FileTransfer.cpp  FileTransfer.h  file_transfer.cpp  file_transfer.h  file_transfer_channel.cpp  file_transfer_channel.h  file_transfer_events.h  fs_file.cpp  fs_file.h  fs_folder.cpp  fs_folder.h  fs_object.cpp  fs_object.h  send_file.cpp  send_file.h
src/ui/: about_content.cpp  about_content.h  app_color_theme.cpp  app_menu.cpp  app_stream_list.cpp  app_stream_list.h  background_widget.cpp  background_widget.h  base_widget.cpp  base_widget.h  computer_icon.cpp  computer_icon.h  create_stream_dialog.cpp  debug_panel.cpp  debug_panel.h  float_3rd_resolution_panel.cpp  float_3rd_resolution_panel.h  float_3rd_scale_panel.cpp  float_3rd_scale_panel.h  float_button_state_indicator.cpp  float_button_state_indicator.h  float_controller.cpp  float_controller.h  float_controller_panel.cpp  float_controller_panel.h  float_icon.cpp  float_icon.h  float_sub_control_panel.cpp  float_sub_control_panel.h  float_sub_display_panel.cpp  float_sub_display_panel.h  float_sub_mode_panel.cpp  float_sub_mode_panel.h  key_state_panel.cpp  key_state_panel.h  notification_item.cpp  notification_item.h  notification_panel.cpp  notification_panel.h  settings_content.cpp  (+6 more)
